--- a/contact.me.html
+++ b/contact.me.html
@@ -10,7 +10,7 @@
         <p>(347)586-8867</p>
         <p>myemail@gmail.com</p>
         <hr>
-        <form action="mailto:info@londonappbrewery.com" method="post" enctype="text/plain">
+        <form action="mailto:kaungt877@gmail.com" method="post" enctype="text/plain">
             <label>Your Name:</label>
             <input type="text" name="Your Name" value=""><br>
             <label>Your Email:</label>
